Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for pre-release sg3_utils-1.48 [20220309] [svn: r942]
  - sg_z_act_query: new utility for sending either a
    Zone activate or Zone query command
  - sg_rep_density: new utility for decoding the response of
    Report density support command [ssc (tape)]
  - rescan-scsi-bus.sh: with '-r' it crashed due to change in
    rev 867 in sg_inq.c from Device_type= to PDT= .
    Change script to use either
    - undo regression in rev 815 that added newline after
      each LUN in the default (no option) output
    - rev 815 changed the order of listing hosts from
      numeric to alphabetical, change it back to numeric
  - sg_rep_zones: add Report zone starting LBA granularity
    field in REPORT ZONES response [zbc2r12]
    - add --brief option, show part of header and last
      descriptor fetched
    - add --find ZT option to find the first occurrence of
      ZT; if ZT prefixed by - or ! find first not equal to ZT
    - add --statistics option
  - sg_decode_sense: add --nodecode option
  - sg_logs: tweak the meaning of --list option to more closely
    reflect the contents of log pages 0x0 and 0x0,0xff
    - make '-lll' set union of log pages 0x0 and 0x0,0xff
    - add --exclude option to exclude vendor specific pages
      and parameters
    - add --undefined option for hex format of undefined/
      unrecognized fields
    - for short binary fields, remove address (index) from
      the left hand side of each line of hex
    - improve 'last_n' log pages; supply VPD and mode pages
      with their name (if T10 defined)
  - sg_modes: improve handling of zbc disks with pdt=0x14
  - sg_inq, sg_vpd: Device Identication VPD page, change
    "IEEE Company_id" to "AOI" as per spc6r06.pdf
  - sg_opcodes: cleanup error reporting