@@ -38,7 +38,7 @@
  * commands tailored for SES (enclosure) devices.
  */
 
-static const char * version_str = "2.56 20220218";    /* ses4r04 */
+static const char * version_str = "2.57 20220309";    /* ses4r04 */
 
 #define MX_ALLOC_LEN ((64 * 1024) - 4)  /* max allowable for big enclosures */
 #define MX_ELEM_HDR 1024
@@ -715,6 +715,7 @@ static struct acronym2tuple ae_sas_a2t_arr[] = {
     {"num_phys", -1, 4, 7, 8, "number of phys"},
     {"phy_id", -1, 28, 7, 8, NULL},
     {"sas_addr", -1, 20, 7, 64, NULL},  /* should be disk or tape ... */
+    {"exp_sas_addr", -1, 8, 7, 64, NULL},  /* expander address */
     {"sata_dev", -1, 11, 0, 1, NULL},
     {"sata_port_sel", -1, 11, 7, 1, NULL},
     {"smp_init", -1, 10, 1, 1, NULL},
@@ -5685,6 +5686,12 @@ main(int argc, char * argv[])
                 if (SET_OPT == cgs_clp->cgs_sel)
                     tavp->val = DEF_SET_VAL;
             }
+            if (!strcmp(cgs_clp->cgs_str, "sas_addr") && op->dev_slot_num < 0) {
+                pr2serr("--get=sas_addr requires --dev-slot-num.  For expander "
+                        "SAS address, use exp_sas_addr instead.\n");
+                ret = SG_LIB_SYNTAX_ERROR;
+                goto err_out;
+            } 
             tavp->cgs_sel = cgs_clp->cgs_sel;
         }
         /* keep this descending for loop directly after ascending for loop */
