@@ -49,7 +49,7 @@ LIBFILESOLD = ../lib/sg_lib.o ../lib/sg_lib_data.o ../lib/sg_io_linux.o
 LIBFILESNEW = ../lib/sg_pt_linux_nvme.o ../lib/sg_lib.o ../lib/sg_lib_data.o \
 		../lib/sg_pt_linux.o ../lib/sg_io_linux.o \
 		../lib/sg_pt_common.o  ../lib/sg_cmds_basic.o \
-		../lib/sg_cmds_basic2.o
+		../lib/sg_cmds_basic2.o ../lib/sg_lib_names.o
 
 all: $(EXECS)
 
