@@ -2,7 +2,7 @@ sg3-utils (1.48-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sun, 06 Mar 2022 13:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Wed, 09 Mar 2022 21:00:00 -0500
 
 sg3-utils (1.47-0.1) unstable; urgency=low
 
