@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for pre-release sg3_utils-1.48 [20220309] [svn: r942]
+Changelog for pre-release sg3_utils-1.48 [20220309] [svn: r943]
   - sg_z_act_query: new utility for sending either a
     Zone activate or Zone query command
   - sg_rep_density: new utility for decoding the response of
@@ -39,6 +39,8 @@ Changelog for pre-release sg3_utils-1.48 [20220309] [svn: r942]
   - sg_opcodes: cleanup error reporting
   - sg_format: allow disk formats on ZBC (zoned) disks
   - sg_read_buffer: add --eh_code= and --no_output options
+  - sg_ses: add exp_sas_addr acronym for getting expander's
+    SAS address
   - inhex/logs_last_n.hex: new, tests for the 4 "Last n ..."
     log (sub)pages
   - sg_lib: add sg_pdt_s_eq() to cope with ZBC disks which may
